--- a/kontak.html
+++ b/kontak.html
@@ -43,9 +43,9 @@
             <div class="p-4 bg-light shadow rounded">
                 <h2 class="fw-bold text-warning">Media Sosial</h2>
                 <div class="d-flex justify-content-start gap-3 align-items-center">
-                    <a href="https://www.instagram.com/yhvanda?igsh=YTl4cGk4NmhkMnN2" target="_blank"><img src="Instagram.gif" alt="Instagram" width="50"></a>
+                    <a href="https://www.instagram.com/yhvanda?igsh=YTl4cGk4NmhkMnN2" target="_blank"><img src="instagram.gif" alt="Instagram" width="50"></a>
                     <a href=https://www.tiktok.com/@evanda_3008?_r=1&_d=eg75kb523lbeck&sec_uid=MS4wLjABAAAAM06lCKYPjhMkSnrZ38apAOxQzS0LTwsR6otxil5Bm6XV6XqIHZNrDPF2nAn33s7T&share_author_id=6963204693993407489&sharer_language=id&source=h5_t&u_code=dih1g99if420md&timestamp=1742702068&user_id=6963204693993407489&sec_user_id=MS4wLjABAAAAM06lCKYPjhMkSnrZ38apAOxQzS0LTwsR6otxil5Bm6XV6XqIHZNrDPF2nAn33s7T&utm_source=copy&utm_campaign=client_share&utm_medium=android&share_iid=7484848193793115905&share_link_id=edcd49f1-d51f-4c40-b655-b63aa2b10474&share_app_id=1180&ugbiz_name=ACCOUNT&ug_btm=b8727%2Cb7360&social_share_type=5&enable_checksum=1"" target="_blank"><img src="tiktok.gif" alt="TikTok" width="50"></a>
-                    <a href="https://youtube.com/@evanda3078?si=64rrUxu_cY8X_LyF" target="_blank"><img src="youtube.png" alt="YouTube" width="50"></a>
+                    <a href="https://youtube.com/@evanda3078?si=64rrUxu_cY8X_LyF" target="_blank"><img src="YouTube.png" alt="YouTube" width="50"></a>
                     <a href="https://wa.me/qr/DBEAMCXVJCA3F1" target="_blank"><img src="whatsapp.gif" alt="WhatsApp" width="50"></a>
                 </div>
                 <p class="mt-3">Klik ikon di atas untuk terhubung langsung dengan kami.</p>
